--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -26,5 +26,58 @@
         android:layout_margin="20dp"
         android:layout_gravity="center" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/welcome_post_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="22 Posts"
+            android:textAllCaps="true"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:textColor="@android:color/holo_blue_bright"
+            android:gravity="center"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/welcome_followers_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="22 Followers"
+            android:textAllCaps="true"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:textColor="@android:color/holo_blue_bright"
+            android:gravity="center"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/welcome_following_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="22 Following"
+            android:textAllCaps="true"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:textColor="@android:color/holo_blue_bright"
+            android:gravity="center"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/welcome_view_post_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="@string/view_post_images"/>
+
 
 </LinearLayout>
