--- a/app/src/main/res/layout/list_view_images.xml
+++ b/app/src/main/res/layout/list_view_images.xml
@@ -27,38 +27,44 @@
         android:layout_height="300dp"
         android:layout_gravity="center" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
       <TextView
           android:id="@+id/list_view_caption"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_margin="5dp"
           android:text="Caption"
           android:textAllCaps="true"
           android:maxLines="3"
           android:textSize="14sp"
           android:textColor="@android:color/darker_gray"
           android:gravity="left"
-          android:layout_weight="2"/>
+          android:layout_weight="2"
+          android:layout_marginTop="5dp"
+          android:layout_marginBottom="5dp"
+          android:layout_alignParentLeft="true"
+          android:layout_alignParentStart="true"
+          android:layout_toLeftOf="@+id/list_view_likes"
+          android:layout_toStartOf="@+id/list_view_likes" />
 
       <TextView
           android:id="@+id/list_view_likes"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_margin="5dp"
           android:text="Likes"
           android:textAllCaps="true"
           android:maxLines="1"
           android:textSize="14sp"
           android:textColor="@android:color/darker_gray"
           android:gravity="left"
-          android:layout_weight="1"/>
+          android:layout_marginBottom="5dp"
+          android:layout_alignTop="@+id/list_view_caption"
+          android:layout_alignParentRight="true"
+          android:layout_alignParentEnd="true" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
   </LinearLayout>
 
